force-app/main/default/objects/Badge_Allocation__c/Badge_Allocation__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - Child object of Badge settings. Badge allocation defines the number of badges assigned to the customer.</description>
    <label>Badge Allocation</label>
    <nameField>
        <displayFormat>BA-{000000}</displayFormat>
        <label>Badge Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Badge Allocation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>