force-app/main/default/objects/Badge_Allocation__c/fields/Badge_Form__c.field-meta.xml
<CustomField>
    <fullName>Badge_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field defines the form builder form for this particular badge allocation.</description>
    <label>Badge Form</label>
    <referenceTo>Questionnaire__c</referenceTo>
    <relationshipLabel>Badge Allocation</relationshipLabel>
    <relationshipName>Badge_Allocation</relationshipName>
    <type>Lookup</type>
</CustomField>