force-app/main/default/objects/Badge_Allocation__c/fields/Badge_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Badge_Numbers__c</fullName>
    <description>Number of badges that will be given to customers.</description>
    <inlineHelpText>Number of Badges Allocated</inlineHelpText>
    <label>Badge Numbers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>