force-app/main/default/objects/Badge_Allocation__c/fields/Badge_Setting__c.field-meta.xml
<CustomField>
    <fullName>Badge_Setting__c</fullName>
    <description>Lookup to Badge Setting.</description>
    <label>Badge Setting</label>
    <referenceTo>Badge_Setting__c</referenceTo>
    <relationshipLabel>Badge Allocation</relationshipLabel>
    <relationshipName>Badge_Allocation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>