force-app/main/default/objects/Badge_Allocation__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Due date for submitting the badge form.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>