force-app/main/default/objects/Badge_Allocation__c/fields/Lower__c.field-meta.xml
<CustomField>
    <fullName>Lower__c</fullName>
    <description>Defines the lower limit of quantity/Area for Product/Booth.</description>
    <inlineHelpText>Quantity/Area</inlineHelpText>
    <label>Lower</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>