force-app/main/default/objects/Badge_Allocation__c/fields/Unlimited_Badges__c.field-meta.xml
<CustomField>
    <fullName>Unlimited_Badges__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked unlimited badges will be allocated for booth/product.</description>
    <label>Unlimited Badges</label>
    <type>Checkbox</type>
</CustomField>