force-app/main/default/objects/Badge_Allocation__c/fields/Upper__c.field-meta.xml
<CustomField>
    <fullName>Upper__c</fullName>
    <description>Defines the upper limit of quantity/Area for Product/Booth.</description>
    <inlineHelpText>Quantity/Area</inlineHelpText>
    <label>Upper</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>