force-app/main/default/objects/Badge_Allocation__c/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <label>User Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>User_Type</valueSetName>
    </valueSet>
</CustomField>