force-app/main/default/objects/Badge_Allocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Badge_Setting__c</columns>
    <columns>Booth_Product_Type__c</columns>
    <columns>Lower__c</columns>
    <columns>Upper__c</columns>
    <columns>Badge_Numbers__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>